# w6100

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/: copilot-instructions.md
examples/basic/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic/main/: main.c
examples/iperf/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/iperf/main/: idf_component.yml  main.c
examples/low_level/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/low_level/main/: main.c
include/: esp_eth_mac_w6100.h  esp_eth_phy_w6100.h  w6100.h
src/: esp_eth_mac_w6100.c  esp_eth_phy_w6100.c  w6100_init.c  w6100_mac.c  w6100_phy.c  w6100_regs.h
